// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteUtils xvault links BOND can publish all: alpha 1`] = `
Object {
  "anchors": Object {},
  "body": "[[dendron://vault2/beta]]
",
  "children": Array [],
  "contentHash": "6567d730ce0443c6900d2168bef41e11",
  "created": 1,
  "custom": Object {
    "nav_order": 0,
    "permalink": "/",
  },
  "data": Object {},
  "desc": "",
  "fname": "alpha",
  "id": "alpha",
  "links": Array [
    Object {
      "alias": "beta",
      "from": Object {
        "fname": "alpha",
        "id": "alpha",
        "vaultName": "vault1",
      },
      "position": Position {
        "end": Object {
          "column": 26,
          "line": 1,
          "offset": 25,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "sameFile": false,
      "to": Object {
        "anchorHeader": undefined,
        "fname": "beta",
        "vaultName": "vault2",
      },
      "type": "wiki",
      "value": "beta",
      "xvault": true,
    },
    Object {
      "alias": "alpha",
      "from": Object {
        "fname": "beta",
        "vaultName": "vault1",
      },
      "position": Position {
        "end": Object {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "backlink",
      "value": "alpha",
    },
    Object {
      "alias": "alpha",
      "from": Object {
        "fname": "beta",
        "vaultName": "vault2",
      },
      "position": Position {
        "end": Object {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "backlink",
      "value": "alpha",
    },
  ],
  "parent": null,
  "title": "Alpha",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault1",
  },
}
`;

exports[`SiteUtils xvault links BOND can publish all: beta 1`] = `
Object {
  "anchors": Object {},
  "body": "[[dendron://vault1/alpha]]
",
  "children": Array [],
  "contentHash": "50cb834c6fe80c43ac33985e55ded9ce",
  "created": 1,
  "custom": Object {
    "nav_order": 1,
  },
  "data": Object {},
  "desc": "",
  "fname": "beta",
  "id": "beta",
  "links": Array [
    Object {
      "alias": "alpha",
      "from": Object {
        "fname": "beta",
        "id": "beta",
        "vaultName": "vault2",
      },
      "position": Position {
        "end": Object {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "sameFile": false,
      "to": Object {
        "anchorHeader": undefined,
        "fname": "alpha",
        "vaultName": "vault1",
      },
      "type": "wiki",
      "value": "alpha",
      "xvault": true,
    },
    Object {
      "alias": "beta",
      "from": Object {
        "fname": "alpha",
        "vaultName": "vault1",
      },
      "position": Position {
        "end": Object {
          "column": 26,
          "line": 1,
          "offset": 25,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "backlink",
      "value": "beta",
    },
  ],
  "parent": null,
  "title": "Beta",
  "type": "note",
  "updated": 1,
  "vault": Object {
    "fsPath": "vault2",
  },
}
`;
